{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 60,
  "lineage": "153c665e-41b4-f0d4-90e1-c2751a08d69f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:listener/app/junglemeet-alb-dev/73b05063ec813f80/1a382d95ccb77067",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:targetgroup/junglemeet-tg-dev/a1ddf94b27c785b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026376606405:listener/app/junglemeet-alb-dev/73b05063ec813f80/1a382d95ccb77067",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:loadbalancer/app/junglemeet-alb-dev/73b05063ec813f80",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb_target_group.main",
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:targetgroup/junglemeet-tg-dev/a1ddf94b27c785b8",
            "arn_suffix": "targetgroup/junglemeet-tg-dev/a1ddf94b27c785b8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026376606405:targetgroup/junglemeet-tg-dev/a1ddf94b27c785b8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "junglemeet-tg-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-tg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-tg-dev"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:loadbalancer/app/junglemeet-alb-dev/73b05063ec813f80",
            "arn_suffix": "app/junglemeet-alb-dev/73b05063ec813f80",
            "desync_mitigation_mode": "defensive",
            "dns_name": "junglemeet-alb-dev-58461086.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:026376606405:loadbalancer/app/junglemeet-alb-dev/73b05063ec813f80",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "junglemeet-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e0479be8fead830"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d9adeeeb8265ad7"
              },
              {
                "subnet_id": "subnet-0fc7b7be2d8122791"
              }
            ],
            "subnets": [
              "subnet-04d9adeeeb8265ad7",
              "subnet-0fc7b7be2d8122791"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-alb-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-alb-dev"
            },
            "vpc_id": "vpc-0a3dd9db53c43083a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:listener/app/junglemeet-alb-dev/73b05063ec813f80/afa37ef2025edfdf",
            "certificate_arn": "arn:aws:acm:us-east-1:026376606405:certificate/44828362-8e66-4262-a365-bb68b530d9d6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:targetgroup/junglemeet-tg-dev/a1ddf94b27c785b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026376606405:listener/app/junglemeet-alb-dev/73b05063ec813f80/afa37ef2025edfdf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:loadbalancer/app/junglemeet-alb-dev/73b05063ec813f80",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb_target_group.main",
            "module.alb.aws_lb.main",
            "module.route53.aws_acm_certificate.this",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_based_on_path",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:targetgroup/junglemeet-tg-dev/a1ddf94b27c785b8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:listener-rule/app/junglemeet-alb-dev/73b05063ec813f80/afa37ef2025edfdf/260a8e83c1ed70e5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/rest/v2/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026376606405:listener-rule/app/junglemeet-alb-dev/73b05063ec813f80/afa37ef2025edfdf/260a8e83c1ed70e5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:026376606405:listener/app/junglemeet-alb-dev/73b05063ec813f80/afa37ef2025edfdf",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb_target_group.main",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.this",
            "module.route53.aws_acm_certificate.this",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:security-group/sg-05e0479be8fead830",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e0479be8fead830",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "junglemeet-sg-alb-dev",
            "name_prefix": "",
            "owner_id": "026376606405",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-sg-alb-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-sg-alb-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:security-group/sg-03d60dc4449ca4a7f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d60dc4449ca4a7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "junglemeet-sg-task-dev",
            "name_prefix": "",
            "owner_id": "026376606405",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-sg-task-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-sg-task-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040cf98a075dfaabe",
            "association_id": "eipassoc-0755554f76c986577",
            "domain": "vpc",
            "id": "eipalloc-040cf98a075dfaabe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0222696ccad967824",
            "private_dns": "ip-10-0-20-150.ec2.internal",
            "private_ip": "10.0.20.150",
            "public_dns": "ec2-44-210-56-158.compute-1.amazonaws.com",
            "public_ip": "44.210.56.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-eip-dev-001"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-eip-dev-001"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063eb77aa3fb58494",
            "association_id": "eipassoc-0433beef6045b756a",
            "domain": "vpc",
            "id": "eipalloc-063eb77aa3fb58494",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c9a310aa429eb4d4",
            "private_dns": "ip-10-0-62-93.ec2.internal",
            "private_ip": "10.0.62.93",
            "public_dns": "ec2-3-86-141-246.compute-1.amazonaws.com",
            "public_ip": "3.86.141.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-eip-dev-002"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-eip-dev-002"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:internet-gateway/igw-0ba99231ab84b06e6",
            "id": "igw-0ba99231ab84b06e6",
            "owner_id": "026376606405",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-igw-dev"
            },
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040cf98a075dfaabe",
            "connectivity_type": "public",
            "id": "nat-00bf23df219ebd689",
            "network_interface_id": "eni-0222696ccad967824",
            "private_ip": "10.0.20.150",
            "public_ip": "44.210.56.158",
            "subnet_id": "subnet-0fc7b7be2d8122791",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-nat-dev-001"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-nat-dev-001"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063eb77aa3fb58494",
            "connectivity_type": "public",
            "id": "nat-03936b5b8c680b9e6",
            "network_interface_id": "eni-0c9a310aa429eb4d4",
            "private_ip": "10.0.62.93",
            "public_ip": "3.86.141.246",
            "subnet_id": "subnet-04d9adeeeb8265ad7",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-nat-dev-002"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-nat-dev-002"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06022849aaf45069f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00bf23df219ebd689",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06022849aaf45069f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ad9893605907d02c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03936b5b8c680b9e6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad9893605907d02c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ba99231ab84b06e6",
            "id": "r-rtb-025af4ece24e3779f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-025af4ece24e3779f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:route-table/rtb-06022849aaf45069f",
            "id": "rtb-06022849aaf45069f",
            "owner_id": "026376606405",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00bf23df219ebd689",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-routing-table-private-001"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-routing-table-private-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:route-table/rtb-0ad9893605907d02c",
            "id": "rtb-0ad9893605907d02c",
            "owner_id": "026376606405",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03936b5b8c680b9e6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-routing-table-private-002"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-routing-table-private-002"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:route-table/rtb-025af4ece24e3779f",
            "id": "rtb-025af4ece24e3779f",
            "owner_id": "026376606405",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba99231ab84b06e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-routing-table-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f98c26bfdcf8c4ad",
            "route_table_id": "rtb-06022849aaf45069f",
            "subnet_id": "subnet-04bdf23556bbb18f1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0881208e907808085",
            "route_table_id": "rtb-0ad9893605907d02c",
            "subnet_id": "subnet-0ba0d0fc6944ebe36"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083b28d89e5fbec2d",
            "route_table_id": "rtb-025af4ece24e3779f",
            "subnet_id": "subnet-0fc7b7be2d8122791"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3d3ed84edd192f4",
            "route_table_id": "rtb-025af4ece24e3779f",
            "subnet_id": "subnet-04d9adeeeb8265ad7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:subnet/subnet-04bdf23556bbb18f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bdf23556bbb18f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026376606405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-private-subnet-dev-001"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-private-subnet-dev-001"
            },
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:subnet/subnet-0ba0d0fc6944ebe36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba0d0fc6944ebe36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026376606405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-private-subnet-dev-002"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-private-subnet-dev-002"
            },
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:subnet/subnet-0fc7b7be2d8122791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc7b7be2d8122791",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026376606405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-public-subnet-dev-001"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-public-subnet-dev-001"
            },
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:subnet/subnet-04d9adeeeb8265ad7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d9adeeeb8265ad7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026376606405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-public-subnet-dev-002"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-public-subnet-dev-002"
            },
            "vpc_id": "vpc-0a3dd9db53c43083a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026376606405:vpc/vpc-0a3dd9db53c43083a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be23b67dc7828b31",
            "default_route_table_id": "rtb-0a1319d99c18879da",
            "default_security_group_id": "sg-04dfe779fac20d858",
            "dhcp_options_id": "dopt-0bbc77edc96e4f3ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3dd9db53c43083a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1319d99c18879da",
            "owner_id": "026376606405",
            "tags": {
              "Environment": "dev",
              "Name": "junglemeet-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "junglemeet-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}